--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 
         <div class="container1">
             <header class="encabezado">
-                <a name="arriba"><img id="logo" src="logos/logo1.png" alt="logo"></a>
+                <a id="arriba"><img id="logo" src="logos/logo1.png" alt="logo"></a>
 
                 <nav id="navbar">
                     <ul>
