--- a/src/main/resources/templates/servicios.html
+++ b/src/main/resources/templates/servicios.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="logos/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container1">
         <header class="encabezado">
-            <a name="arriba"><img id="logo" src="logos/kisspng-computer-icons-customer-service-icon-design-it-ser-ub4we-engineering-services-5b04fd031e98b6.5225810215270535711253.png" alt="logo"></a>
+            <a name="arriba"><img id="logo" src="logos/logo1.png" alt="logo"></a>
 
             <nav id="navbar">
                 <ul>
