Commit union back y front exitosa

--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -1,42 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
-    <title>Document</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"></html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="logos/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" th:href="@{/css/estilos.css}" />
+    <title>Registro de Proveedor</title>
+  </head>
+  <body>
     <div class="container1">
-        <header class="encabezado">
-            <a name="arriba"><img id="logo" src="logos/kisspng-computer-icons-customer-service-icon-design-it-ser-ub4we-engineering-services-5b04fd031e98b6.5225810215270535711253.png" alt="logo"></a>
+      <header class="encabezado">
+        <a name="arriba"><img id="logo" src="/logos/logo1.png" alt="logo" /></a>
 
-            <nav id="navbar">
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="registro.html">Registrate</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
+        <nav id="navbar">
+          <ul>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="registro.html">Registrate</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+          </ul>
+        </nav>
+      </header>
     </div>
 
-    <h1>hola</h1>
+    <h1>Registro de Proveedor</h1>
+    <form action="/proveedor/registro" method="POST">
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre" required /><br />
 
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required /><br />
 
-    <a href="#arriba">Ir arriba</a><br><br>
+      <label for="password">Contraseña:</label>
+      <input type="password" id="password" name="password" required /><br />
+
+      <label for="telefono">Teléfono:</label>
+      <input type="number" id="telefono" name="telefono" required /><br />
+
+      <label for="comentarios">Comentarios:</label>
+      <textarea id="comentarios" name="comentarios" rows="4" required></textarea
+      ><br />
+
+      <label for="direccion">Dirección:</label>
+      <input type="text" id="direccion" name="direccion" required /><br />
+
+      <label for="honorarioHoras">Honorario por Horas:</label>
+      <input
+        type="number"
+        id="honorarioHoras"
+        name="honorarioHoras"
+        step="0.01"
+        required
+      /><br />
+
+      <label for="cantidadContactos">Cantidad de Contactos:</label>
+      <input
+        type="number"
+        id="cantidadContactos"
+        name="cantidadContactos"
+        required
+      /><br />
+
+      <button type="submit">Registrar Proveedor</button>
+    </form>
+
+    <!--<script src="js/js.main"></script> -->
+
     <footer class="pie">
-        <div class="texto-pie ">
-            <p>ubicacion - chacras de coria -Mendoza</p>
-        </div>
-        <div class="redes-sociales">
-            <a href="https://www.facebook.com/" target="_blank"><img src="logos/facebook.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="logos/instagram.png" alt="Instagram"></a>
-            <a href="https://twitter.com/" target="_blank"><img src="logos/twitter.png" alt="Twitter"></a>
-            <p></p>
-        </div>
+      <div class="texto-pie">
+        <p>ubicacion - chacras de coria -Mendoza</p>
+      </div>
+      <div class="redes-sociales">
+        <a href="https://www.facebook.com/" target="_blank"
+          ><img src="/logos/facebook.png" alt="Facebook"
+        /></a>
+        <a href="https://www.instagram.com/" target="_blank"
+          ><img src="/logos/instagram.png" alt="Instagram"
+        /></a>
+        <a href="https://twitter.com/" target="_blank"
+          ><img src="/logos/twitter.png" alt="Twitter"
+        /></a>
+        <p></p>
+      </div>
     </footer>
-
-</body>
+  </body>
 </html>
