--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/logos/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="css/estilos.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/src/main/resources/static/logos/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="/src/main/resources/static/css/estilos.css">
     <title>Servicios</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
 
         <div class="container1">
             <header class="encabezado">
-                <a name="arriba"><img id="logo" src="/logos/logo1.png" alt="logo"></a>
+                <a id="arriba"><img id="logo" src="/src/main/resources/static/logos/logo1.png" alt="logo"></a>
 
                 <nav id="navbar">
                     <ul>
@@ -30,54 +30,48 @@
         <div class="container">
 
             <div class="mySlides">
-                <img src="img/albañil.jpg" alt="">
+                <img src="/src/main/resources/static/img/albañil.jpg" alt="">
             </div>
 
-      <div class="mySlides">
-        <img src="img/parquista.jpg" alt="" />
-      </div>
-      <div class="mySlides">
-        <img src="img/techista.jpg" alt="" />
-      </div>
-      <div class="mySlides">
-        <img src="img/electricidad.jpg" alt="" />
-      </div>
-      <div class="mySlides">
-        <img src="img/limpiapiscina.jpg" alt="" />
-      </div>
-      <div class="mySlides">
-        <img src="img/paisajista.jpg" alt="" />
-      </div>
-      <div class="mySlides">
-        <img src="img/limpieza.jpg" alt="" />
-      </div>
+            <div class="mySlides">
+                <img src="/src/main/resources/static/img/parquista.jpg"alt="">
+            </div>
+            <div class="mySlides">
+                <img src="/src/main/resources/static/img/limpieza.jpg" alt="">
+            </div>
+            <div class="mySlides">
+                <img src="/src/main/resources/static/img/electricidad.jpg" alt="">
+            </div>
+            <div class="mySlides">
+                <img src="/src/main/resources/static/img/techista.jpg" alt="">
+            </div>
+            <div class="mySlides">
+                <img src="/src/main/resources/static/img/limpiapiscina.jpg" alt="">
+            </div>
+            <div class="mySlides">
+                <img src="/src/main/resources/static/img/paisajista.jpg" alt="">
+            </div>
 
-      <div class="slider-controls">
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-      </div>
-      <br />
-      <a class="arriba" href="#arriba">Ir arriba</a><br /><br />
-    </div>
+            <div class="slider-controls">
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+            <a class="arriba" href="#arriba">Ir arriba</a><br><br>
+        </div>
 
-    <script src="js/main.js"></script>
+        <script src="/src/main/resources/static/js/main.js"></script>
 
-    <footer class="pie">
-      <div class="texto-pie">
-        <p>ubicacion - chacras de coria -Mendoza</p>
-      </div>
-      <div class="redes-sociales">
-        <a href="https://www.facebook.com/" target="_blank"
-          ><img src="logos/facebook.png" alt="Facebook"
-        /></a>
-        <a href="https://www.instagram.com/" target="_blank"
-          ><img src="logos/instagram.png" alt="Instagram"
-        /></a>
-        <a href="https://twitter.com/" target="_blank"
-          ><img src="logos/twitter.png" alt="Twitter"
-        /></a>
-        <p></p>
-      </div>
-    </footer>
-  </body>
+        <footer class="pie">
+            <div class="texto-pie ">
+                <p>ubicacion - chacras de coria -Mendoza</p>
+            </div>
+            <div class="redes-sociales">
+                <a href="https://www.facebook.com/" target="_blank"><img src="/src/main/resources/static/logos/facebook.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="/src/main/resources/staticlogos/instagram.png" alt="Instagram"></a>
+                <a href="https://twitter.com/" target="_blank"><img src="/src/main/resources/static/logos/twitter.png" alt="Twitter"></a>
+                <p></p>
+            </div>
+        </footer>
+</body>
 </html>
