problemas intenrtando solucionar

--- a/src/main/resources/templates/servicios.html
+++ b/src/main/resources/templates/servicios.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="logos/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="shortcut icon" href="/src/main/resources/static/logos/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="/src/main/resources/static/css/estilos.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container1">
         <header class="encabezado">
-            <a name="arriba"><img id="logo" src="logos/logo1.png" alt="logo"></a>
+            <a id="arriba"><img id="logo" src="/src/main/resources/static/logos/logo1.png" alt="logo"></a>
 
             <nav id="navbar">
                 <ul>
@@ -32,9 +32,9 @@
             <p>ubicacion - chacras de coria -Mendoza</p>
         </div>
         <div class="redes-sociales">
-            <a href="https://www.facebook.com/" target="_blank"><img src="logos/facebook.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="logos/instagram.png" alt="Instagram"></a>
-            <a href="https://twitter.com/" target="_blank"><img src="logos/twitter.png" alt="Twitter"></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="/src/main/resources/static/logos/facebook.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="/src/main/resources/static/logos/instagram.png" alt="Instagram"></a>
+                <a href="https://twitter.com/" target="_blank"><img src="/src/main/resources/static/logos/twitter.png" alt="Twitter"></a>
             <p></p>
         </div>
     </footer>
