--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -10,7 +10,7 @@
     width: 100px;
     
 }
-header {
+.encabezado {
     display: flex; 
     align-items: center; 
     justify-content: space-between;
@@ -18,10 +18,6 @@ header {
  
 }
 
-.encabezado {
-    display: flex;
-    align-items: center;  
-}
 #navbar {
     text-align:  right;
     
@@ -51,6 +47,7 @@ header {
   }
 
 /*Footer*/
+
 .pie {
     padding: 20px;
     display: flex;
@@ -87,7 +84,12 @@ header {
 .container{
     width: 70%;
     position: relative;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
+
 
 .mySlides{
     display: none;
@@ -97,19 +99,15 @@ header {
     width:100% ;
 
 }
-.container {
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
+
+   
 .slider-controls {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
 }
-h2{
+.encabezado1{
     text-align: center;
     background-color: antiquewhite;
     width: 100%;
