--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"></html>
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org" html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="logos/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" th:href="@{/css/estilos.css}" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link ref="shortcut icon" href="logos/logo.png" type="image/x-icon">
+    <link rel="stylesheet" th:href="@{/css/estilos.css}">
     <title>Registro de Proveedor</title>
   </head>
   <body>
     <div class="container1">
       <header class="encabezado">
-        <a name="arriba"><img id="logo" src="/logos/logo1.png" alt="logo" /></a>
+        <a name="arriba"><img id="logo" src="/logos/logo1.png" alt="logo"></a>
 
         <nav id="navbar">
           <ul>
@@ -27,23 +26,23 @@
     <h1>Registro de Proveedor</h1>
     <form action="/proveedor/registro" method="POST">
       <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre" required /><br />
+      <input type="text" id="nombre" name="nombre" required ><br >
 
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required /><br />
+      <input type="email" id="email" name="email" required><br >
 
       <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" required /><br />
+      <input type="password" id="password" name="password" required ><br >
 
       <label for="telefono">Teléfono:</label>
-      <input type="number" id="telefono" name="telefono" required /><br />
+      <input type="number" id="telefono" name="telefono" required ><br >
 
       <label for="comentarios">Comentarios:</label>
       <textarea id="comentarios" name="comentarios" rows="4" required></textarea
-      ><br />
+      ><br >
 
       <label for="direccion">Dirección:</label>
-      <input type="text" id="direccion" name="direccion" required /><br />
+      <input type="text" id="direccion" name="direccion" required ><br >
 
       <label for="honorarioHoras">Honorario por Horas:</label>
       <input
@@ -51,16 +50,14 @@
         id="honorarioHoras"
         name="honorarioHoras"
         step="0.01"
-        required
-      /><br />
+        required><br>
 
       <label for="cantidadContactos">Cantidad de Contactos:</label>
       <input
         type="number"
         id="cantidadContactos"
         name="cantidadContactos"
-        required
-      /><br />
+        required><br>
 
       <button type="submit">Registrar Proveedor</button>
     </form>
@@ -73,14 +70,11 @@
       </div>
       <div class="redes-sociales">
         <a href="https://www.facebook.com/" target="_blank"
-          ><img src="/logos/facebook.png" alt="Facebook"
-        /></a>
+          ><img src="/logos/facebook.png" alt="Facebook"></a>
         <a href="https://www.instagram.com/" target="_blank"
-          ><img src="/logos/instagram.png" alt="Instagram"
-        /></a>
+          ><img src="/logos/instagram.png" alt="Instagram"></a>
         <a href="https://twitter.com/" target="_blank"
-          ><img src="/logos/twitter.png" alt="Twitter"
-        /></a>
+          ><img src="/logos/twitter.png" alt="Twitter"></a>
         <p></p>
       </div>
     </footer>
