--- a/src/main/resources/templates/contacto.html
+++ b/src/main/resources/templates/contacto.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
-    <title>Registro usuario</title>
-</head>
-<body>
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="shortcut icon" href="/logos/logo.png" type="image/x-icon" >
+    <link rel="stylesheet" href="css/estilos.css" >
+    <title>Servicios</title>
+      </head>
+    <body>
     <div class="container1">
         <header class="encabezado">
-            <a name="arriba"><img id="logo" src="logos/kisspng-computer-icons-customer-service-icon-design-it-ser-ub4we-engineering-services-5b04fd031e98b6.5225810215270535711253.png" alt="logo"></a>
+        <a id="arriba"><img id="logo" src="logos/logo1.png" alt="logo" ></a>
 
             <nav id="navbar">
                 <ul>
@@ -21,21 +22,52 @@
             </nav>
         </header>
     </div>
+//
 
-    <h1>que hacemos aca</h1>
+
+    <form action="/usuario/registro" method="POST">
+
+        <h1>Registro de usuario</h1>
+
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" required><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br>
+
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" required><br>
+
+        <label for="telefono">Teléfono:</label>
+        <input type="number" id="telefono" name="telefono" required><br>
+
+
+        <label for="direccion">Dirección:</label>
+        <input type="text" id="direccion" name="direccion" required><br>
+
+        <button type="submit">Registrar usuario</button>
+        </form>
+
+
+
+
+        <br>
 
 
     <a href="#arriba">Ir arriba</a><br><br>
     <footer class="pie">
-        <div class="texto-pie ">
-            <p>ubicacion - chacras de coria -Mendoza</p>
-        </div>
-        <div class="redes-sociales">
-            <a href="https://www.facebook.com/" target="_blank"><img src="logos/facebook.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="logos/instagram.png" alt="Instagram"></a>
-            <a href="https://twitter.com/" target="_blank"><img src="logos/twitter.png" alt="Twitter"></a>
-            <p></p>
-        </div>
+      <div class="texto-pie">
+        <p>ubicacion - chacras de coria -Mendoza</p>
+      </div>
+      <div class="redes-sociales">
+        <a href="https://www.facebook.com/" target="_blank"
+          ><img src="logos/facebook.png" alt="Facebook"></a>
+        <a href="https://www.instagram.com/" target="_blank"
+          ><img src="logos/instagram.png" alt="Instagram"></a>
+        <a href="https://twitter.com/" target="_blank"
+          ><img src="logos/twitter.png" alt="Twitter"></a>
+        <p></p>
+      </div>
     </footer>
 
 </body>
