--- a/src/main/resources/templates/servicios.html
+++ b/src/main/resources/templates/servicios.html
@@ -13,7 +13,7 @@
 
             <nav id="navbar">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="/">Inicio</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="registro.html">Registrate</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
