--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -14,12 +14,13 @@
     display: flex; 
     align-items: center; 
     justify-content: space-between;
-    padding: 1px 20px;
- 
+    padding: 1px 20px; 
+    border-bottom: solid black;
 }
 
 #navbar {
     text-align:  right;
+  
     
 }
 #navbar ul {
@@ -133,6 +134,7 @@
 .arriba:hover{
 color: yellow;
 }
+
 
 
 /* Media query para pantallas más pequeñas, como teléfonos */
