--- a/src/main/resources/templates/contacto.html
+++ b/src/main/resources/templates/contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link rel="shortcut icon" href="/logos/logo.png" type="image/x-icon" >
     <link rel="stylesheet" href="css/estilos.css" >
-    <title>Servicios</title>
+    <title>conecta usuario</title>
       </head>
     <body>
     <div class="container1">
@@ -14,7 +14,7 @@
 
             <nav id="navbar">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="/">Inicio</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="registro.html">Registrate</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
