--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
             <li><a href="/">Inicio</a></li>
             <li><a href="servicios.html">Servicios</a></li>
             <li><a href="/proveedor/registrar">Registrate</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="/usuario/registrar">Contacto</a></li>
           </ul>
         </nav>
       </header>
@@ -43,6 +43,7 @@
       </div>
       <div class="mySlides">
         <img src="img/paisajista.jpg" alt="" >
+        <p></p>
       </div>
       <div class="mySlides">
         <img src="img/limpieza.jpg" alt="" >
