--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,79 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/logos/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="css/estilos.css" />
-    <title>Servicios</title>
-  </head>
-  <body>
-    <div class="container1">
-      <header class="encabezado">
-        <a name="arriba"><img id="logo" src="logos/logo1.png" alt="logo" /></a>
 
-        <nav id="navbar">
-          <ul>
-            <li><a href="/">Inicio</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="/proveedor/registrar">Registrate</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-          </ul>
-        </nav>
-      </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="/logos/logo.png" type="image/x-icon" />
+  <link rel="stylesheet" href="css/estilos.css" />
+  <title>Servicios</title>
+</head>
+
+<body>
+  <div class="container1">
+    <header class="encabezado">
+      <a name="arriba"><img id="logo" src="logos/logo1.png" alt="logo" /></a>
+
+      <nav id="navbar">
+        <ul>
+          <li><a href="/">Inicio</a></li>
+          <li><a href="/proveedor/buscador">Servicios</a></li>
+          <li><a href="/registrar">Registrate</a></li>
+          <li><a href="/proveedor/registrar">Registro Proveedor</a></li>
+          <li><a href="/login">Login</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
+
+  <h2 class="encabezado1">Servicios</h2>
+  <div class="container">
+    <div class="mySlides">
+      <img src="img/albañil.jpg" alt="" />
     </div>
 
-    <h2 class="encabezado1">Servicios</h2>
-    <div class="container">
-      <div class="mySlides">
-        <img src="img/albañil.jpg" alt="" />
-      </div>
-
-      <div class="mySlides">
-        <img src="img/parquista.jpg" alt="" />
-      </div>
-      <div class="mySlides">
-        <img src="img/techista.jpg" alt="" />
-      </div>
-      <div class="mySlides">
-        <img src="img/electricidad.jpg" alt="" />
-      </div>
-      <div class="mySlides">
-        <img src="img/limpiapiscina.jpg" alt="" />
-      </div>
-      <div class="mySlides">
-        <img src="img/paisajista.jpg" alt="" />
-      </div>
-      <div class="mySlides">
-        <img src="img/limpieza.jpg" alt="" />
-      </div>
-
-      <div class="slider-controls">
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-      </div>
-      <br />
-      <a class="arriba" href="#arriba">Ir arriba</a><br /><br />
+    <div class="mySlides">
+      <img src="img/parquista.jpg" alt="" />
+    </div>
+    <div class="mySlides">
+      <img src="img/techista.jpg" alt="" />
+    </div>
+    <div class="mySlides">
+      <img src="img/electricidad.jpg" alt="" />
+    </div>
+    <div class="mySlides">
+      <img src="img/limpiapiscina.jpg" alt="" />
+    </div>
+    <div class="mySlides">
+      <img src="img/paisajista.jpg" alt="" />
+    </div>
+    <div class="mySlides">
+      <img src="img/limpieza.jpg" alt="" />
     </div>
 
-    <script src="js/main.js"></script>
+    <div class="slider-controls">
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br />
+    <a class="arriba" href="#arriba">Ir arriba</a><br /><br />
+  </div>
 
-    <footer class="pie">
-      <div class="texto-pie">
-        <p>ubicacion - chacras de coria -Mendoza</p>
-      </div>
-      <div class="redes-sociales">
-        <a href="https://www.facebook.com/" target="_blank"
-          ><img src="logos/facebook.png" alt="Facebook"
-        /></a>
-        <a href="https://www.instagram.com/" target="_blank"
-          ><img src="logos/instagram.png" alt="Instagram"
-        /></a>
-        <a href="https://twitter.com/" target="_blank"
-          ><img src="logos/twitter.png" alt="Twitter"
-        /></a>
-        <p></p>
-      </div>
-    </footer>
-  </body>
+  <script src="js/main.js"></script>
+
+  <footer class="pie">
+    <div class="texto-pie">
+      <p>ubicacion - chacras de coria -Mendoza</p>
+    </div>
+    <div class="redes-sociales">
+      <a href="https://www.facebook.com/" target="_blank"><img src="logos/facebook.png" alt="Facebook" /></a>
+      <a href="https://www.instagram.com/" target="_blank"><img src="logos/instagram.png" alt="Instagram" /></a>
+      <a href="https://twitter.com/" target="_blank"><img src="logos/twitter.png" alt="Twitter" /></a>
+      <p></p>
+    </div>
+  </footer>
+</body>
+
 </html>
