--- a/src/main/resources/templates/LoginUsuario.html
+++ b/src/main/resources/templates/LoginUsuario.html
@@ -22,8 +22,8 @@
             <div class="navbar-nav">
                   <a class="nav-link active" href="/">Inicio</a>
                   <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-                  <a class="nav-link" href="/registrar">no anda</a>
-                  <a class="nav-link" href="/proveedor/registrar">Registro Proveedor</a>
+                  <a class="nav-link" href="/registrar">RegUsuario</a>
+                  <a class="nav-link" href="/proveedor/registrar">RegProv</a>
                   <a class="nav-link" href="/login">Login</a>
               </div>
           </div>
@@ -36,11 +36,11 @@
     <div class="left-side">
         <div class="box">
             <h4>¿Deseas recibir un servicio en específico?</h4>
-            <button type="submit" th:href="@{/registroUsuario}" class="btn btn-primary">Registrarme como usuario</button>
+            <button type="submit" th:href="@{/registro}" class="btn btn-primary">Registrarme como usuario</button>
             <br>
             <br>
             <h4>¿Deseas ofrecer un servicio en específico?</h4>
-            <button type="submit" th:href="@{/registroProveedor}" class="btn btn-primary">Registrarme como proveedor</button>
+            <button type="submit" th:href="@{/proveedor/registro}" class="btn btn-primary">Registrarme como proveedor</button>
             <br>
         </div>
     </div>
