--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,13 +19,13 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                  <a class="nav-link active" href="/">Inicio</a>
-                  <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-                  <a class="nav-link" href="/registrar">no anda</a>
-                  <a class="nav-link" href="/proveedor/registrar">Registro Proveedor</a>
-                  <a class="nav-link" href="/login">Login</a>
-              </div>
+          <div class="navbar-nav">
+            <a class="nav-link active" href="/">Inicio</a>
+            <a class="nav-link" href="/proveedor/buscador">Buscar</a>
+            <a class="nav-link" href="/registrar">RegUsuario</a>
+            <a class="nav-link" href="/proveedor/registrar">RegProv</a>
+            <a class="nav-link" href="/login">Login</a>
+        </div>
           </div>
       </div>
   </nav>
@@ -68,7 +68,7 @@
       </ul>
   </div>
   <div class="button-container">
-    <a th:href="@{/conocenos}" class="button">Conocenos</a>
+    <a href="/src/main/resources/templates/conocenos.html" class="button">Conocenos</a>
     <a href="/login" class="button">Conectate!</a>
   </div>
 
