--- a/src/main/resources/templates/registroProveedor.html
+++ b/src/main/resources/templates/registroProveedor.html
@@ -20,13 +20,13 @@
               <span class="navbar-toggler-icon"></span>
           </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-                  <a class="nav-link active" href="/">Inicio</a>
-                  <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-                  <a class="nav-link" href="/registrar">no anda</a>
-                  <a class="nav-link" href="/proveedor/registrar">Registro Proveedor</a>
-                  <a class="nav-link" href="/login">Login</a>
-              </div>
+      <div class="navbar-nav">
+        <a class="nav-link active" href="/">Inicio</a>
+        <a class="nav-link" href="/proveedor/buscador">Buscar</a>
+        <a class="nav-link" href="/registrar">RegUsuario</a>
+        <a class="nav-link" href="/proveedor/registrar">RegProv</a>
+        <a class="nav-link" href="/login">Login</a>
+    </div>
           </div>
       </div>
   </nav>
