--- a/src/main/resources/templates/registroUsuario.html
+++ b/src/main/resources/templates/registroUsuario.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" html lang="es">
-  <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <link rel="shortcut icon" href="" type="image/x-icon" >
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProSkillFinder</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
-  </head>
+    <link rel="stylesheet" href="css/estilos2.css">
+</head>
+<body>
 
-  <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-          <a class="navbar-brand" href="@{/}">
-            <img class="logo" src="logos/casacasa.png" alt="">
-          </a>
-          <a class="navbar-brand" href="#"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-                  <a class="nav-link active" href="/">Inicio</a>
-                  <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-                  <a class="nav-link" href="/registrar">no anda</a>
-                  <a class="nav-link" href="/proveedor/registrar">Registro Proveedor</a>
-                  <a class="nav-link" href="/login">Login</a>
-              </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand">
+            <img src="logos/casacasa.png"  width="30" height="30" class="d-inline-block align-top">
+        </a>
+        <a class="navbar-brand" href="logos/casacasa.png"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" href="/">Inicio</a>
+            <a class="nav-link" href="/proveedor/buscador">Buscar</a>
+            <a class="nav-link" href="/registrar">RegUsuario</a>
+            <a class="nav-link" href="/proveedor/registrar">RegProv</a>
+            <a class="nav-link" href="/login">Login</a>
+        </div>
           </div>
       </div>
   </nav>
@@ -34,6 +33,72 @@
 <h1>ProSkillFinder</h1>
 <h1>Registro de Usuario</h1>
 
+
+<form class="formulario" th:action="@{/registro}" method="POST">
+    <div class="form-group my-3">
+      <h3 class="card-title">Registrate!</h3>
+    </div>
+    <div class="form-group my-3">
+      <input
+        type="text"
+        class="form-control"
+        name="nombre"
+        placeholder="NOMBRE"
+        th:value="${nombre}"
+    >
+    </div>
+    <div class="form-group my-3">
+      <input
+        type="email"
+        class="form-control"
+        name="email"
+        placeholder="EMAIL"
+        th:value="${email}"
+    >
+    </div>
+
+    <div class="form-group my-3">
+      <input
+        type="password"
+        class="form-control"
+        name="password"
+        placeholder="CONTRASEÑA"
+        th:value="${password}"
+    >
+    </div>
+    <div class="form-group my-3">
+      <input
+        type="password"
+        class="form-control"
+        name="password2"
+        placeholder="REPETIR CONTRASEÑA"
+        th:value="${password2}"
+    >
+    </div>
+    <div class="form-group my-3">
+      <input
+        type="number"
+        class="form-control"
+        name="telefono"
+        placeholder="telefono"
+        th:value="${telefono}"
+    >
+    </div>
+    <div class="form-group my-3">
+      <input
+        type="text"
+        class="form-control"
+        name="direccion"
+        placeholder="Direccion"
+        th:value="${direccion}"
+    >
+    </div>
+
+    <button type="submit" class="btn btn-primary mt-3 botones">
+      Registrarme
+    </button>
+  </form>
+<!--
     <form class="formulario" th:action="@{/registro}" method="POST">
         <div class="form-group my-3">
             <h3 class="card-title">Registrate!</h3>
@@ -66,6 +131,7 @@
             Registrarme
         </button>
     </form>
+-->
 
     <section class="text-center container">
         <div class="row mt-3">
@@ -77,9 +143,9 @@
      <!--- <div>
         <a class="arriba" href="/">Ir arriba</a>
       </div>-->
-    
+
       <script src="js/main.js"></script>
-    
+
       <footer class="pie">
         <div class="texto-pie">
           <p>ubicacion - chacras de coria -Mendoza</p>
@@ -93,5 +159,4 @@
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
-    
     </html>
