--- a/src/main/resources/templates/conocenos.html
+++ b/src/main/resources/templates/conocenos.html
@@ -19,13 +19,13 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                  <a class="nav-link active" href="/">Inicio</a>
-                  <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-                  <a class="nav-link" href="/registrar">no anda</a>
-                  <a class="nav-link" href="/proveedor/registrar">Registro Proveedor</a>
-                  <a class="nav-link" href="/login">Login</a>
-              </div>
+          <div class="navbar-nav">
+            <a class="nav-link active" href="/">Inicio</a>
+            <a class="nav-link" href="/proveedor/buscador">Buscar</a>
+           <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
+            <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
+            <a class="nav-link" href="/login">Login</a>
+        </div>
           </div>
       </div>
   </nav>
@@ -44,10 +44,11 @@
   están a tu disposición para mantener todo en perfecto estado.</p>
   <br>
 
-  <h4>Limpieza Profesional: </h4><br> Nuestro equipo de limpieza se encargará de dejar tus espacios relucientes. 
-  Ofrecemos limpieza de oficinas, hogares, y mucho más. <br>
+  <h4>Limpieza Profesional: </h4><br> <p>Nuestro equipo de limpieza se encargará de dejar tus espacios relucientes.
+  Ofrecemos limpieza de oficinas, hogares, y mucho más. </p> <br>
 
-  <h4>Jardinería y Paisajismo:</h4> <br> Transforma tu jardín en un paraíso verde con nuestros servicios de jardinería y paisajismo. Desde el diseño hasta el mantenimiento, hacemos que tus espacios exteriores sean impresionantes.
+  <h4>Jardinería y Paisajismo:</h4> <br> <p> Transforma tu jardín en un paraíso verde con nuestros servicios de jardinería y paisajismo. 
+    Desde el diseño hasta el mantenimiento, hacemos que tus espacios exteriores sean impresionantes.</p>
 
   <h4>Servicios de Techado y Reparación:</h4> br Protege tu inversión con nuestros servicios de techado y reparación. Estamos listos para enfrentar cualquier desafío relacionado con techos.
 
