--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -123,17 +123,16 @@ h3{
     display: inline-block;
     margin: 10px  ; 
     padding: 10px 10px;
-    background-color: #000; 
-    color:antiquewhite; 
+    background:linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%); 
+    color:white; 
     text-decoration: none; 
-    border-radius: 30%;
+    border-radius: 5px;
     font-weight: bold;
     text-align: center
   }
   
   .button:hover {
-    background-color: yellow; 
-    color:#000;
+    color:red;
   }
   
 
@@ -180,7 +179,9 @@ h3{
     background:linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%);
   }
   
-  
+  #botonr:hover {
+    color:red;
+  }
   .box {
     background-color: #000;
     padding: 20px;
@@ -208,20 +209,23 @@ h3{
 
   /*Registro Proveedor*/
 
+
   .container3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 25%;
-    margin-top: 10%;
-    margin-bottom: 10%;
-    background-color: #000; 
+    width: 440px; 
+    margin: 0 auto; 
     padding: 20px;
-    border: 5px solid orange;
-    border-radius: 8px; 
-    /*box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Sombra */
+    border: 5px solid orange; 
+    background-color: #000; 
+    border-radius: 2%; 
   }
   
+  /* Estilo adicional para el título */
+  .container3 h1 {
+    text-align: center;
+    margin-bottom: 20px; 
+    color:white;
+  }
+
   #pres{
     color: white;
     vertical-align: top;
@@ -230,7 +234,6 @@ h3{
   .textofp{
     color:white;
   }
-
 /*buscar proveedor*/
 
 .imagen-enmarcada {
@@ -243,7 +246,7 @@ h3{
   margin-top: 20%;
   margin-left: 10%;
   margin-right: 10%;
- margin-bottom: 35%;
+  margin-bottom: 35%;
 }
 
 .imagen-enmarcada img {
@@ -251,6 +254,40 @@ h3{
   height: auto;
 }
   
+
+/*registro usuario*/
+
+.regUsuario{
+  width: 555px;
+  border: 5px solid orange;
+  border-radius: 2%;
+  margin-left: 30%;
+  margin-top: 4%;
+  text-align: justify;
+  background-color: #000;
+}
+.regUsuario h1{
+  margin-top: 10%;
+  margin-bottom: 5%;
+  text-align: center;
+  color: white;
+}
+
+.regUsuario button{
+  margin-left: 35%;
+  margin-bottom: 5%;
+  
+}
+.regUsuario input{
+  margin-left: 10%;
+  width: 80%;
+}
+.textRegU{
+  font-size: 25px;
+  text-align: center;
+  margin-left: 10%;
+  margin-right: 10%;
+}
 
 /* Media query para pantallas más pequeñas */
 @media screen and (max-width: 768px) {
