--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -23,8 +23,8 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="/">Inicio</a>
         <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-        <a class="nav-link" href="/registrar">RegUsuario</a>
-        <a class="nav-link" href="/proveedor/registrar">RegProv</a>
+       <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
+        <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
         <a class="nav-link" href="/login">Login</a>
     </div>
           </div>
