--- a/src/main/resources/templates/LoginUsuario.html
+++ b/src/main/resources/templates/LoginUsuario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org" html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,12 +20,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                  <a class="nav-link active" href="/">Inicio</a>
-                  <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-                  <a class="nav-link" href="/registrar">RegUsuario</a>
-                  <a class="nav-link" href="/proveedor/registrar">RegProv</a>
-                  <a class="nav-link" href="/login">Login</a>
-              </div>
+                <a class="nav-link active" href="/">Inicio</a>
+                <a class="nav-link" href="/proveedor/buscador">Buscar</a>
+               <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
+                <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
+                <a class="nav-link" href="/login">Login</a>
+            </div>
           </div>
       </div>
   </nav>
@@ -36,11 +36,12 @@
     <div class="left-side">
         <div class="box">
             <h4>¿Deseas recibir un servicio en específico?</h4>
-            <button type="submit" th:href="@{/registro}" class="btn btn-primary">Registrarme como usuario</button>
+            <a th:href="@{/registrar}" class="button">Registrate como Usuario</a>
+            <br>
             <br>
             <br>
             <h4>¿Deseas ofrecer un servicio en específico?</h4>
-            <button type="submit" th:href="@{/proveedor/registro}" class="btn btn-primary">Registrarme como proveedor</button>
+            <a th:href="@{/proveedor/registrar}" class="button">Registrate como Proveedor</a>
             <br>
         </div>
     </div>
