--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org" html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,8 +22,8 @@
           <div class="navbar-nav">
             <a class="nav-link active" href="/">Inicio</a>
             <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-            <a class="nav-link" href="/registrar">RegUsuario</a>
-            <a class="nav-link" href="/proveedor/registrar">RegProv</a>
+           <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
+            <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
             <a class="nav-link" href="/login">Login</a>
         </div>
           </div>
@@ -68,7 +68,7 @@
       </ul>
   </div>
   <div class="button-container">
-    <a href="/src/main/resources/templates/conocenos.html" class="button">Conocenos</a>
+    <a href="/conocenos" class="button">Conocenos</a>
     <a href="/login" class="button">Conectate!</a>
   </div>
 
