--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -55,6 +55,7 @@
               <h1 class="text-center">Nuestros Servicios</h1>
           </div>
       </div>
+      <!--ver si esta bien conectado a la base de datos el form-->
       <div class="row justify-content-center">
         <form action="/proveedor/buscador" method="get">
           <div class="col-md-8">
@@ -75,7 +76,7 @@
                   <option value="Limpieza">Limpieza</option>
               </select>
             </div>
-            <button type="submit">Buscar</button>
+            <button type="submit" class="botonBus">Buscar</button>
           </form>
       </div>
   </div>
@@ -86,27 +87,27 @@
       <div class="row">
           <div class="col-md-4">
               <div class="card">
-                  <img src="imagenes/proveedor1.jpg" class="card-img-top" alt="Proveedor 1">
+                  <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg" class="card-img-top" alt="Proveedor 1">
                   <div class="card-body">
                       <h5 class="card-title">Proveedor 1</h5>
                       <p class="card-text">Cantidad de estrellas: 5</p>
                   </div>
               </div>
           </div>
-
+<br>
           <div class="col-md-4">
               <div class="card">
-                  <img src="imagenes/proveedor2.jpg" class="card-img-top" alt="Proveedor 2">
+                  <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto3-150x150.jpg" class="card-img-top" alt="Proveedor 2">
                   <div class="card-body">
                       <h5 class="card-title">Proveedor 2</h5>
                       <p class="card-text">Cantidad de estrellas: 4</p>
                   </div>
               </div>
           </div>
-
+<br>
           <div class="col-md-4">
               <div class="card">
-                  <img src="imagenes/proveedor3.jpg" class="card-img-top" alt="Proveedor 3">
+                  <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg" class="card-img-top" alt="Proveedor 3">
                   <div class="card-body">
                       <h5 class="card-title">Proveedor 3</h5>
                       <p class="card-text">Cantidad de estrellas: 3</p>
@@ -114,11 +115,11 @@
               </div>
           </div>
 
-          <br>
+          <h2></h2>
 
           <div class="col-md-4">
               <div class="card">
-                  <img src="imagenes/proveedor4.jpg" class="card-img-top" alt="Proveedor 3">
+                  <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto3-150x150.jpg" class="card-img-top" alt="Proveedor 3">
                   <div class="card-body">
                       <h5 class="card-title">Proveedor 4</h5>
                       <p class="card-text">Cantidad de estrellas: 3</p>
@@ -128,7 +129,7 @@
 
           <div class="col-md-4">
               <div class="card">
-                  <img src="imagenes/proveedor4.jpg" class="card-img-top" alt="Proveedor 3">
+                  <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg" class="card-img-top" alt="Proveedor 3">
                   <div class="card-body">
                       <h5 class="card-title">Proveedor 4</h5>
                       <p class="card-text">Cantidad de estrellas: 3</p>
@@ -138,7 +139,7 @@
 
           <div class="col-md-4">
               <div class="card">
-                  <img src="imagenes/proveedor4.jpg" class="card-img-top" alt="Proveedor 3">
+                  <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg" class="card-img-top" alt="Proveedor 3">
                   <div class="card-body">
                       <h5 class="card-title">Proveedor 4</h5>
                       <p class="card-text">Cantidad de estrellas: 3</p>
