--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -138,13 +138,13 @@ h3{
 
 
 
-/*registro*/
+/*login*/
 .container2 {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 10px;
+    
   }
   
   
@@ -206,7 +206,13 @@ h3{
   .textobox{
     color: white;
   }
-
+/*
+  .textlog{
+    margin:10px;
+    text-align: center;
+    font-size: 20px;
+    color:rgb(16, 16, 16);}*/
+  
   /*Registro Proveedor*/
 
 
@@ -217,9 +223,12 @@ h3{
     border: 5px solid orange; 
     background-color: #000; 
     border-radius: 2%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
-  .container3 h1 {
+  .container3 h5 {
     text-align: center;
     margin-bottom: 20px; 
     color:white;
@@ -232,7 +241,16 @@ h3{
  
   .textofp{
     color:white;
+    align-items: center;
   }
+
+  input, select, textarea{
+    width: 100%;
+
+  }
+
+
+
 /*buscar proveedor*/
 .botonBus{
   
@@ -273,6 +291,7 @@ h3{
   width: 80%;
 }
 .textRegU{
+  margin-top: 10px;
   font-size: 25px;
   text-align: center;
   margin-left: 10%;
