--- a/src/main/resources/templates/conocenos.html
+++ b/src/main/resources/templates/conocenos.html
@@ -19,122 +19,117 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" href="/">Inicio</a>
-            <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-           <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
-            <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
-            <a class="nav-link" href="/login">Login</a>
+            <div class="navbar-nav">
+                <a class="nav-link active" href="/">Inicio</a>
+                <a class="nav-link" href="/proveedor/buscador">Buscar</a>
+                <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
+                 <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
+                <a class="nav-link" href="/login">Login</a>
+            </div>
         </div>
-          </div>
-      </div>
-  </nav>
+    </div>
+</nav>
+<div class="contText">
+    <h1 class="titulo1">"¡Somos la Solución Integral para el Hogar!"</h1>
 
-  <h1 class="titulo1">"¡Somos la Solución Integral para el Hogar "</h1> 
+    <h4 class="subtit">Destacamos los servicios:</h4>
+
+    <h4 class="subtit">Mantenimiento y Reparaciones:</h4>
+
+    <p class="textcono">Desde instalaciones eléctricas y plomería hasta trabajos de carpintería y pintura, nuestros expertos
+        están a tu disposición para mantener todo en perfecto estado.</p>
 
 
+    <h4  class="subtit">Limpieza Profesional: </h4> <p class="textcono">Nuestro equipo de limpieza se encargará de dejar tus espacios relucientes.
+    Ofrecemos limpieza de oficinas, hogares, y mucho más. </p>
 
-
-
-  <h4>Destacamos los servicios:</h4>
-  <br>
-  <h4>Mantenimiento y Reparaciones:</h4>
-  <br>
-  <p>Desde instalaciones eléctricas y plomería hasta trabajos de carpintería y pintura, nuestros expertos
-  están a tu disposición para mantener todo en perfecto estado.</p>
-  <br>
-
-  <h4>Limpieza Profesional: </h4><br> <p>Nuestro equipo de limpieza se encargará de dejar tus espacios relucientes.
-  Ofrecemos limpieza de oficinas, hogares, y mucho más. </p> <br>
-
-  <h4>Jardinería y Paisajismo:</h4> <br> <p> Transforma tu jardín en un paraíso verde con nuestros servicios de jardinería y paisajismo. 
+    <h4 class="subtit">Jardinería y Paisajismo:</h4>  <p class="textcono"> Transforma tu jardín en un
+    paraíso verde con nuestros servicios de jardinería y paisajismo.
     Desde el diseño hasta el mantenimiento, hacemos que tus espacios exteriores sean impresionantes.</p>
 
-  <h4>Servicios de Techado y Reparación:</h4> br Protege tu inversión con nuestros servicios de techado y reparación. Estamos listos para enfrentar cualquier desafío relacionado con techos.
+    <h4 class="subtit">Servicios de Techado y Reparación:</h4>  <p class="textcono"> Protege tu inversión
+    con nuestros servicios de techado y reparación. Estamos listos para enfrentar cualquier
+    desafío relacionado con techos. </p>
 
-  <h4>Piscinas y Espacios de Agua:</h4> br Mantenemos tu piscina en condiciones óptimas y también ofrecemos servicios de construcción y renovación de áreas de agua.
+    <h4 class="subtit">Piscinas y Espacios de Agua:</h4>
+    <p class="textcono">Mantenemos tu piscina en condiciones óptimas y también ofrecemos
+        servicios de construcción y renovación de áreas de agua. </p>
 
-  ¿Por qué elegirnos?
+    <h1 class="titulo2">¿Por qué elegirnos?</h1>
 
-  Profesionales Altamente Calificados: Contamos con un equipo de expertos en cada área de servicio.
+    <h4 class="subtit"> Profesionales Altamente Calificados:</h4>
+    <p class="textcono">Contamos con un equipo de expertos en cada área de servicio. </p>
 
-  Precios Competitivos: Ofrecemos calidad premium a precios asequibles.
+    <h4 class="subtit"> Precios Competitivos:</h4> <p class="textcono">Ofrecemos calidad premium a precios asequibles. </p>
 
-  Atención Personalizada: Entendemos tus necesidades y personalizamos nuestros servicios para satisfacerlas.
+    <h4 class="subtit">Compromiso con la Calidad:</h4>
+    <p class="textcono"> No descansamos hasta que estés 100% satisfecho con nuestros servicios. </p>
 
-  Compromiso con la Calidad: No descansamos hasta que estés 100% satisfecho con nuestros servicios.
+    <h2 class="textfin"> No pierdas más tiempo. ¡Contáctanos hoy para obtener una cotización gratuita y comenzar a mejorar tus espacios! </h2>
 
-  Contacto:
+</div>
 
-  Llama ahora al [Número de Teléfono] o visítanos en [Dirección]. Estamos disponibles para ayudarte con todos tus servicios generales. ¡[Nombre de tu Empresa] - Tu socio de confianza!
-
-  Llamado a la Acción:
-
-  No pierdas más tiempo. ¡Contáctanos hoy para obtener una cotización gratuita y comenzar a mejorar tus espacios!
-
-
-
-  <div class="transicion1">
+<div class="transicion1">
     <ul>
 
-          <li>
+        <li>
 
             <img src="img/obreros.jpg" alt="">
         </li>
 
         <li>
 
-          <img src="img/obreros.jpg" alt="">
+            <img src="img/obreros.jpg" alt="">
         </li>
 
         <li>
-          <img src="img/obreros.jpg" alt="">
+            <img src="img/obreros.jpg" alt="">
         </li>
 
         <li>
-          <img src="img/obreros.jpg" alt="">
+            <img src="img/obreros.jpg" alt="">
         </li>
 
         <li>
-          <img src="img/obreros.jpg" alt="">
+            <img src="img/obreros.jpg" alt="">
         </li>
 
         <li>
-          <img src="img/obreros.jpg" alt="">
+            <img src="img/obreros.jpg" alt="">
         </li>
         <li>
-          <img src="img/obreros.jpg" alt="">
+            <img src="img/obreros.jpg" alt="">
         </li>
         <li>
-          <img src="img/obreros.jpg" alt="">
+            <img src="img/obreros.jpg" alt="">
         </li>
-      </ul>
-  </div>
-      <div class="button-container">
-        <a href="/" class="button">Botón 1</a>
-        <a href="enlace2.html" class="button">Botón 2</a>
-      </div> <!-- ESTE CONTENEDOR ES BOTONES  ABAJO-->
+    </ul>
+</div>
 
 
 
+<section class="text-center container">
+    <div class="row mt-3">
+        <div class="divVolver">
+            <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+        </div>
+    </div>
+</section>
 
-<a class="arriba" href="#arriba">Ir arriba</a><br>
-<br>
-
-    <footer class="pie">
-      <div class="texto-pie">
+<footer class="pie">
+    <div class="texto-pie">
         <p>ubicacion - chacras de coria -Mendoza</p>
-      </div>
-      <div class="redes-sociales">
+    </div>
+    <div class="redes-sociales">
         <a href="https://www.facebook.com/" target="_blank"
-          ><img src="logos/facebook.png" alt="Facebook"></a>
+        ><img src="logos/facebook.png" alt="Facebook"></a>
         <a href="https://www.instagram.com/" target="_blank"
-          ><img src="logos/instagram.png" alt="Instagram"></a>
+        ><img src="logos/instagram.png" alt="Instagram"></a>
         <a href="https://twitter.com/" target="_blank"
-          ><img src="logos/twitter.png" alt="Twitter"></a>
+        ><img src="logos/twitter.png" alt="Twitter"></a>
         <p></p>
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+    </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
 </html>
