--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -15,7 +15,7 @@
     flex-wrap: wrap;
     background-color: #000;
   }
-    
+
 .texto-pie {
     font-family: 'Maven Pro', sans-serif;
     text-align: center;
@@ -24,13 +24,13 @@
 
 .redes-sociales {
     display: flex;
-    align-items: center;    
+    align-items: center;
   }
 
 
   #redes {
     font-size: x-large;
-    
+
     color: yellow;
     padding: 0px;
   }
@@ -57,7 +57,7 @@ h3{
 }
 
 .transicion, .transicion1 {
-    
+
     width: 70%;
     height: auto;
     position: relative;
@@ -70,12 +70,12 @@ h3{
 .transicion ul, .transicion1 ul {
     display: flex;
     padding: 0;
-    width: 800%; 
+    width: 800%;
     animation: slide 15s infinite alternate ease-in-out;
 }
 
 .transicion li, .transicion1 li{
-    width: 16.67%; 
+    width: 16.67%;
     list-style: none;
 }
 
@@ -86,16 +86,16 @@ h3{
 }
 
 .transicion h5 {
-    position: absolute; 
-    background-color: rgba(0, 0, 0, 0.7); 
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
-    padding-bottom: 20px; 
+    padding-bottom: 20px;
     text-align: center;
     top: 50%;
     left: 15%;
     right: 15%;
   }
-  
+
 @keyframes slide {
     0% {margin-left: 0;}
     16.67% {margin-left: 0;}
@@ -116,53 +116,98 @@ h3{
     100% {margin-left: -500%;}
 }
 .button-container {
-    text-align: center; 
+    text-align: center;
   }
 
 .button {
     display: inline-block;
-    margin: 10px  ; 
+    margin: 10px  ;
     padding: 10px 10px;
-    background:linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%); 
-    color:white; 
-    text-decoration: none; 
+    background:linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%);
+    color:white;
+    text-decoration: none;
     border-radius: 5px;
     font-weight: bold;
     text-align: center
   }
-  
+
   .button:hover {
     color:red;
   }
-  
+
+/* conocenos*/
 
 
+.titulo1{
+  margin-top: 5%;
+  font-size: 28px;
+  color:#000;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-bottom: 10%;
 
-/*registro*/
+}
+.titulo2{
+  font-size: 23px;
+  margin-bottom: 5%;
+  margin-top: 5%;
+}
+
+.subtit{
+  font-size: 20px;
+  color:#000;
+  margin-left: 15%;
+  margin-right: 15%;
+  text-decoration: underline black;
+
+}
+
+.textcono{
+  font-size: 18px;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+.textfin{
+  font-size: 25px;
+  text-align: center;
+  margin: 0;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+
+}
+
+
+/*login*/
+
 .container2 {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 10px;
+
   }
-  
-  
+
+
   .left-side {
     border-radius: 10px;
     width: 50%;
     padding: 20px;
     background-color: #000;
-    margin-right: 10px;
+    margin-right: 5%;
+    margin-left: 10%;
   }
-  
+
   .right-side {
     border-radius: 10px;
     width: 50%;
     padding: 14px;
     margin-bottom: 15px;
     background-color: #000;
-    margin-left: 10px; 
+    margin-left: 5%;
+    margin-right: 10%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -171,14 +216,15 @@ h3{
   .card-title{
     color: white;
   }
-  
+
   #botonr {
     display:flex;
-    margin: 10px;
+    margin: 10%;
     border-radius: 5px;
     background:linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%);
+
   }
-  
+
   #botonr:hover {
     color:red;
   }
@@ -187,18 +233,18 @@ h3{
     padding: 20px;
     border: 1px solid #000;
   }
-  
+
   h4 {
     font-size: 18px;
     margin-bottom: 10px;
     color: white;
   }
-  
+
   button {
     display: block;
     margin: 10px 0;
   }
-  
+
   .btn {
     background:linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%);
   }
@@ -207,21 +253,33 @@ h3{
     color: white;
   }
 
+
+
+/*
+  .textlog{
+    margin:10px;
+    text-align: center;
+    font-size: 20px;
+    color:rgb(16, 16, 16);}*/
+
   /*Registro Proveedor*/
 
 
   .container3 {
-    width: 440px; 
-    margin: 0 auto; 
+    width: 440px;
+    margin: 0 auto;
     padding: 20px;
-    border: 5px solid orange; 
-    background-color: #000; 
-    border-radius: 2%; 
+    border: 5px solid orange;
+    background-color: #000;
+    border-radius: 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  
-  .container3 h1 {
+
+  .container3 h5 {
     text-align: center;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
     color:white;
   }
 
@@ -229,13 +287,23 @@ h3{
     color: white;
     vertical-align: top;
   }
- 
+
   .textofp{
     color:white;
+    align-items: center;
   }
+
+  input, select, textarea{
+    width: 100%;
+  }
+
+  .container3 button{
+    margin-left: 35%;
+  }
+
 /*buscar proveedor*/
 .botonBus{
-  
+
   margin-left: 50%;
 }
 
@@ -266,17 +334,59 @@ h3{
 .regUsuario button{
   margin-left: 35%;
   margin-bottom: 5%;
-  
+
 }
 .regUsuario input{
   margin-left: 10%;
   width: 80%;
 }
 .textRegU{
+  margin-top: 10px;
   font-size: 25px;
   text-align: center;
   margin-left: 10%;
   margin-right: 10%;
+}
+
+/*del buscador*/
+.imagen-enmarcada {
+  text-align: center;
+  border: 2px solid orange;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 5%;
+}
+
+.imagen-enmarcada img {
+  width: 100%;
+  height: auto;
+}
+
+
+.imagen-prov img {
+  width: 20%;
+  height: auto;
+}
+
+.botonbus{
+  margin-left: 57%;
+  border-radius: 5px;
+  border: 1px solid #000;
+  width: 7%;
+}
+
+.seleb{
+  display: flex;
+  margin-top: 5%;
+  margin-left: 35%;
+  width: 80%;
+  border-radius: 5px;
+  height: 100%;
 }
 
 /* Media query para pantallas más pequeñas */
@@ -286,7 +396,7 @@ h3{
     flex-direction: column;
     text-align: center;
     }
-  
+
   .transicion h5 {
     left: 10%;
     right: 10%;
@@ -299,7 +409,7 @@ h3{
 
   .logo{
    width:20%;
-   
+
   }
 
   #servicio{
@@ -321,9 +431,9 @@ h3{
 
   .navbar .navbar-toggler {
     position: absolute;
-    right: 20px; 
+    right: 20px;
     top: 50%;
     transform: translate(0, -50%);
-    display: block;  
+    display: block;
   }
 }
