--- a/src/main/resources/templates/registroUsuario.html
+++ b/src/main/resources/templates/registroUsuario.html
@@ -21,12 +21,12 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" href="/">Inicio</a>
-            <a class="nav-link" href="/proveedor/buscador">Buscar</a>
+            <a class="nav-link" href="/proveedor/buscarProveedorPorRubro?rubro=Jardinero">Buscar</a>
            <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
             <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
             <a class="nav-link" href="/login">Login</a>
-        </div>
           </div>
+        </div>
       </div>
   </nav>
 
