--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,9 +15,13 @@
         <nav id="navbar">
           <ul>
             <li><a href="/">Inicio</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
+            <li>
+              <a href="/proveedor/buscarProveedorPorRubro?rubro=Jardinero"
+                >Servicios</a
+              >
+            </li>
             <li><a href="/proveedor/registrar">Registrate</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="login">Login de usuario</a></li>
           </ul>
         </nav>
       </header>
