--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -35,12 +35,11 @@
       <label for="password">Contraseña:</label>
       <input type="password" id="password" name="password" required /><br />
 
+      <label for="password2">Repita su contraseña:</label>
+      <input type="password" id="password2" name="password2" required /><br />
+
       <label for="telefono">Teléfono:</label>
       <input type="number" id="telefono" name="telefono" required /><br />
-
-      <label for="comentarios">Comentarios:</label>
-      <textarea id="comentarios" name="comentarios" rows="4" required></textarea
-      ><br />
 
       <label for="direccion">Dirección:</label>
       <input type="text" id="direccion" name="direccion" required /><br />
@@ -54,13 +53,34 @@
         required
       /><br />
 
-      <label for="cantidadContactos">Cantidad de Contactos:</label>
-      <input
-        type="number"
-        id="cantidadContactos"
-        name="cantidadContactos"
+      <label for="rubro">selecciona un rubro:</label>
+      <select id="rubro" name="rubro">
+        <option value="Jardinero">Jardinero</option>
+        <option value="Chapista">Chapista</option>
+        <option value="Piletero">Piletero</option>
+        <option value="Salidor">Salidor</option>
+        <option value="Limpieza">Limpieza</option>
+        <option value="Otro">
+          Otro
+          <input
+            type="text"
+            id="rubroOtro"
+            name="rubroOtro"
+            placeholder="Especificar otro rubro"
+            style="display: none"
+          />
+        </option>
+      </select>
+      <br />
+
+      <label for="presentacion">presentacion:</label>
+      <textarea
+        id="presentacion"
+        name="presentacion"
+        rows="4"
         required
-      /><br />
+      ></textarea
+      ><br />
 
       <button type="submit">Registrar Proveedor</button>
     </form>
