--- a/src/main/resources/templates/ContactarProveedor.html
+++ b/src/main/resources/templates/ContactarProveedor.html
@@ -3,13 +3,35 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
-<html>
+<html xmlns:th="https://www.thymeleaf.org">
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+              
+        
+         
+                            <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Nombre</li>
+                            <li th:text="${proveedor.nombre}"></li>
+                            <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Direccion</li>
+                            <li th:text="${proveedor.direccion}"></li>
+                            <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Honorarios por hora</li>
+                            <li th:text="${proveedor.honorarioHora}"></li>
+                            <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Telefono</li>
+                            <li th:text="${proveedor.telefono}"></li>
+                            <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Presentacion</li>
+                            <li th:text="${proveedor.presentacion}"></li>
+                            <p> Ingresa una descripcion completa del trabajo que requieres</p>
+                                
+                            <input type="text"> </input>  
+                            
+                            <a th:href="@{/orden/contacto/__${proveedor.id}__}" class="btn btn-primary" style="margin:10px" >Solicitar cotizacion</a>
+                            
+                            
+                           
+                            
+                       
     </body>
 </html>
