Login y registro funcionando de USER y PROVEEDOR

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" html lang="es">
 
-<html xmlns:th="http://www.thymeleaf.org" html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +31,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" href="/">Inicio</a>
-          <a class="nav-link" href="/proveedor/buscarProveedorPorRubro?rubro=Jardinero">Buscar</a>
+          <a class="nav-link" href="/proveedor/buscador">Buscar</a>
           <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
             <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
           <a class="nav-link" href="/login">Login</a>
