--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" href="/">Inicio</a>
-                    <a class="nav-link" href="/proveedor/buscarProveedorPorRubro?rubro=Jardinero">Buscar</a>
+                    <a class="nav-link" href="/proveedor/buscador">Buscar</a>
                     <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
             <a class="nav-link" href="/proveedor/registrar">RegProv</a> -->
                     <a class="nav-link" href="/login">Login</a>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="row justify-content-center">
-        <form action="/proveedor/buscarProveedorPorRubro" method="get">
+        <form action="/proveedor/buscador" method="post">
             <div class="col-md-8">
                 <select class="seleb" name="rubro" id="rubro" required>
                     <option class="opc" value="">Selecciona un rubro</option>
