--- a/src/main/resources/templates/panelProveedor.html
+++ b/src/main/resources/templates/panelProveedor.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+
     <title>Title</title>
 </head>
-<body>
 
+<body>
+    <a href="/">Inicio</a>
+    <h1>Aca va el tablero de control del proveedor</h1>
 </body>
+
 </html>
