vistaProveedor y vistaUsuario cambiadas por editar

--- a/src/main/resources/templates/editarUsuario.html
+++ b/src/main/resources/templates/editarUsuario.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Aqui iría la logica de los usuarios al loguearse</h1>
+    <h1>Aqui iría la logica de edicion del usuario</h1>
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
